index.css
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap');
/* 
# Front-end Style Guide

## Layout

The designs were created to the following widths:

- Mobile: 375px
- Desktop: 1440px

## Colors

### Primary

- Blue: hsl(246, 80%, 60%)

- Light red (work): hsl(15, 100%, 70%)
- Soft blue (play): hsl(195, 74%, 62%)
- Light red (study): hsl(348, 100%, 68%)
- Lime green (exercise): hsl(145, 58%, 55%)
- Violet (social): hsl(264, 64%, 52%)
- Soft orange (self care): hsl(43, 84%, 65%)

### Neutral

- Very dark blue: hsl(226, 43%, 10%)
- Dark blue: hsl(235, 46%, 20%)
- Desaturated blue: hsl(235, 45%, 61%)
- Pale Blue: hsl(236, 100%, 87%)

## Typography

### Body Copy

- Font size: 18px (card titles e.g. Work, Play)

### Font

- Family: [Rubik](https://fonts.google.com/specimen/Rubik)
- Weights: 300, 400, 500 */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Rubik';
  background-color: hsl(226, 43%, 10%);
  min-height: 100vh;
  height: 100%;
  font-family: 'Rubik';
  background-color: hsl(226, 43%, 10%);
  margin: auto;
  display: flex;
  justify-content: center;
  align-items: center;
}

main {
  display: grid;
  gap: 1rem;
  padding: 1rem;
  margin: 5rem auto;
  max-width: 600px;
}

#report-header {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  border-radius: 15px;
  background-color: hsl(235, 46%, 20%);
  color: white;
}

#report-profile {
  width: 100%;
  display: flex;
  padding: 1.5rem;
  align-items: center;
  gap: 1rem;
  background-color: hsl(246, 80%, 60%);
  border-radius: 15px;
}

.title {
  font-size: 12px;
  font-weight: 500;
  color: lightsteelblue;
  margin-bottom: 5px;
}

.name {
  font-size: 18px;
  font-weight: 300;
}

.category {
  margin: 1.5rem;
  cursor: pointer;
  color: hsl(235, 45%, 61%);
  text-transform: capitalize;
}

.category:hover {
  color: white;
}

.category.active {
  color: white;
}

.image-jeremy {
  height: 60px;
  width: auto;
  border: 3px solid white;
  border-radius: 50%;
}

.card-bg {
  background-size: 65px;
  background-position: calc(100% - 1rem) -5px;
  background-repeat: no-repeat;
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  height: 100%;
  border-radius: 15px;
}

.card-content {
  flex: 1;
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin-top: 35px;
  padding: 1.5rem;
  border-radius: 15px;
  color: white;
  background-color: hsl(235, 46%, 20%);
  align-items: center;
  justify-content: space-between;
  gap: 0.5rem;
  cursor: pointer;
}

.card-content:hover {
  background-color: hsl(235, 45%, 55%)
}

.card-content>*:nth-child(even) {
  margin-left: auto;
  text-align: right;
}

.category-title {
  font-weight: 500;
}

.ellipsis-icon {
  height: 100%;
  color: #BBC0FF;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
}

.ellipsis-icon:hover {
  color: white;
}

.time-spent {
  font-size: 28px;
  font-weight: 300;
}

.last-time {
  font-size: 12px;
  color: hsl(236, 100%, 87%);
  letter-spacing: 0.5px;
}

.card-bg.work {
  background-image: url('../images/icon-work.svg');
  background-color: hsl(15, 100%, 70%);
}

.card-bg.play {
  background-image: url('../images/icon-play.svg');
  background-color: hsl(195, 74%, 62%);
}

.card-bg.study {
  background-image: url('../images/icon-study.svg');
  background-color: hsl(348, 100%, 68%);
}

.card-bg.exercise {
  background-image: url('../images/icon-exercise.svg');
  background-color: hsl(145, 58%, 55%);
}

.card-bg.social {
  background-image: url('../images/icon-social.svg');
  background-color: hsl(264, 64%, 52%);
}

.card-bg.self-care {
  background-image: url('../images/icon-self-care.svg');
  background-color: hsl(43, 84%, 65%);
}

@media (min-width:800px) {

  main {
    max-width: 900px;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    margin: auto;
  }

  #report-header {
    grid-row: 1/3;
    flex-direction: column;
  }

  #report-profile {
    flex-basis: 60%;
    flex-direction: column;
    align-items: baseline;
    justify-content: flex-start;
    gap: 1.5rem;
    margin-bottom: 1rem;
  }

  .name {
    font-size: 32px;
  }

  .category {
    margin-top: 0;
  }


  .time-spent {
    grid-column: 1/3;
  }

  .last-time {
    grid-row: 3/4;
    grid-column: 1/3;
  }

  .card-content .last-time {
    margin-left: unset;
    text-align: unset;

  }

}

